stage 2. No duplicate. All site indexing. Need long test