@@ -3,9 +3,9 @@ package searchengine.services;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
-import org.jsoup.Connection;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
+import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 import org.springframework.lang.Nullable;
 import searchengine.config.JsoupCfg;
@@ -15,12 +15,15 @@ import searchengine.repo.PageRepo;
 import searchengine.repo.SiteRepo;
 
 import java.io.IOException;
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URL;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashSet;
-import java.util.Optional;
 import java.util.Set;
-import java.util.concurrent.CancellationException;
+
+import java.util.concurrent.ForkJoinPool;
 import java.util.concurrent.RecursiveAction;
 
 @Getter
@@ -30,69 +33,66 @@ public class PageIndexUtil extends RecursiveAction {
     private final PageRepo pageRepo;
     private final SiteRepo siteRepo;
     private final JsoupCfg jsoupCfg;
-    private URI pageUri;
-    private SiteEntity site;
-    private Set<URI> childrenUri;
+    private PageEntity page;
+    private Set<URL> childrenUrl;
 
-    public PageIndexUtil(PageRepo pageRepo, SiteRepo siteRepo, JsoupCfg jsoupCfg, SiteEntity site, URI uri) {
+    public PageIndexUtil(PageRepo pageRepo, SiteRepo siteRepo, JsoupCfg jsoupCfg, PageEntity page) {
         this.pageRepo = pageRepo;
         this.siteRepo = siteRepo;
         this.jsoupCfg = jsoupCfg;
-        this.site = site;
-        this.pageUri = uri;
+        this.page = page;
     }
 
     /**
      * Основные вычисления, выполняемые этой задачей
      */
     @Override
-    protected void compute() throws RuntimeException {
+    protected void compute() {
+        if (IndexingServiceImpl.stopFlag) {
+            return;
+        }
         /* Таймаут между запросами к страницам сайта */
         try {
             Thread.sleep(110);
         } catch (InterruptedException e) {
             e.printStackTrace();
             log.error("Error on sleep thread");
-            Thread.currentThread().interrupt();
-        }
-        if (IndexingServiceImpl.isStopFlagSet()) {
-            return;
         }
 
-        childrenUri = readPage(pageUri);
+        childrenUrl = readPage(page);
 
-        if (childrenUri == null) {
-            log.debug("Not found valid links on: " + pageUri);
+        if (childrenUrl == null) {
+            log.debug("Not found valid links on " + page.getSite().getName()
+                    + ": " + page.getPath());
             return;
         }
-        log.debug("Found " + childrenUri.isEmpty() + " valid links on: " + pageUri);
+        log.debug("Found " + childrenUrl.size() + " valid links on " +
+                page.getSite().getName() + ": " + page.getPath());
         ArrayList<PageIndexUtil> subTaskList = new ArrayList<>();
-        for (URI itemURI : childrenUri) {
-            if (pageRepo.countBySiteAndPath(site, itemURI.getPath())>0) {
+        for (URL itemURL : childrenUrl) {
+            if (pageRepo.countBySiteAndPath(page.getSite(), itemURL.getPath()) > 0) {
                 continue;
             }
-            subTaskList.add(new PageIndexUtil(pageRepo, siteRepo, jsoupCfg, site, itemURI));
+            subTaskList.add(new PageIndexUtil(pageRepo, siteRepo, jsoupCfg,
+                    new PageEntity(page.getSite(), itemURL.getPath())));
         }
-        try {
-            invokeAll(subTaskList);
-        } catch (CancellationException c) {
-            log.info("User interrupt indexing: " + pageUri);
-        }
+        invokeAll(subTaskList);
     }
 
     @Nullable
-    private HashSet<URI> readPage(URI uri) {
-        HashSet<URI> uriSet = new HashSet<>();
-        PageEntity pageEntity = new PageEntity(site, pageUri.getPath());
-        if(pageRepo.countBySiteAndPath(pageEntity.getSite(), pageEntity.getPath())>0) {
-            return null;
+    private HashSet<URL> readPage(PageEntity page) {
+        HashSet<URL> urlSet = new HashSet<>();
+        synchronized (this) {
+            if (pageRepo.countBySiteAndPath(page.getSite(), page.getPath()) > 0) {
+                return null;
+            }
+            pageRepo.save(page);
         }
-        pageRepo.save(pageEntity);
-        Elements elements;
-        Document doc;
         try {
-            doc = Jsoup
-                    .connect(uri.toString())
+            URL urlSite = new URL(page.getSite().getUrl());
+            Document doc = Jsoup
+                    .connect(urlSite.getProtocol() + "://" +
+                            urlSite.getHost() + page.getPath())
                     .userAgent(jsoupCfg.getUserAgent())
                     .referrer(jsoupCfg.getReferrer())
                     .timeout(jsoupCfg.getTimeout())
@@ -101,43 +101,66 @@ public class PageIndexUtil extends RecursiveAction {
                     .get();
             int statusCode = doc.connection().response().statusCode();
             if ((statusCode != 200)) {
-                pageRepo.updateCodeAndContentById(statusCode, "", pageEntity.getId());
+                pageRepo.updateCodeAndContentById(statusCode, "", page.getId());
                 siteRepo.updateStatusTimeAndLast_errorById(new java.util.Date(),
                         "Read page code = " + statusCode,
-                        site.getId());
+                        page.getSite().getId());
                 return null;
             }
-            pageRepo.updateCodeAndContentById(statusCode,doc.body().html(), pageEntity.getId());
+            pageRepo.updateCodeAndContentById(statusCode, doc.html(), page.getId());
             siteRepo.updateStatusTimeAndLast_errorById(new java.util.Date(),
-                    null, site.getId());
+                    null, page.getSite().getId());
 
-            elements = doc.select("a");
+            Elements elements = doc.select("a");
+
             elements.stream().map(e -> e.absUrl("href")).forEach(link -> {
                 if (link.contains("#")) {
                     log.debug("# on link: " + link);
                     return;
                 }
-                URI linkURI = URI.create(link);
-                if (!linkURI.getScheme().startsWith("http")) {
+                URL linkURL;
+                try {
+                    linkURL = new URL(link);
+                } catch (MalformedURLException e) {
+                    log.error("MalformedURLException on page: " + link);
                     return;
                 }
-                if (!linkURI.getHost().equals(uri.getHost())) {
+                if (!linkURL.getProtocol().startsWith("http")) {
                     return;
                 }
-                if (linkURI.getPath().equals(uri.getPath())) {
+                if (!linkURL.getHost().equals(urlSite.getHost())) {
                     return;
                 }
-                if(pageRepo.countBySiteAndPath(site, linkURI.getPath())>0) {
+                if (linkURL.getPath().equals(page.getPath())) {
                     return;
                 }
-                uriSet.add(linkURI);
+                if (linkURL.getPath().endsWith(".doc") ||
+                        linkURL.getPath().endsWith(".docx") ||
+                        linkURL.getPath().endsWith(".rtf") ||
+                        linkURL.getPath().endsWith(".pptx") ||
+                        linkURL.getPath().endsWith(".pdf") ||
+                        linkURL.getPath().endsWith(".jpg") ||
+                        linkURL.getPath().endsWith(".jpeg") ||
+                        linkURL.getPath().endsWith(".png") ||
+                        linkURL.getPath().endsWith(".tif") ||
+                        linkURL.getPath().endsWith(".tiff") ||
+                        linkURL.getPath().endsWith(".xls") ||
+                        linkURL.getPath().endsWith(".xlsx") ||
+                        linkURL.getPath().contains("http") ||
+                        linkURL.getPath().contains("download")){
+                    return;
+                }
+                urlSet.add(linkURL);
                 log.debug("add " + link);
             });
+        } catch (MalformedURLException e) {
+            log.error("MalformedURLException link on site: " + page.getSite().getName());
+            return null;
         } catch (IOException e) {
-            log.error("Exception on execute connection to: " + uri);
-            return uriSet;
+            log.error("Exception on execute connection to: " + page.getSite().getName());
+            return null;
         }
-        return uriSet;
+        return urlSet;
     }
 
 }
